# mlb-hof-predictions-demo

./: .gitignore  README.md  dune  dune-project  mlb-hof.db  mlb-hof.opam
data/: batter_knn_matrix.b  default_values.csv  queries.sql  schema.sql  schema_test.sql
data/clean/: AwardsPlayers.csv  AwardsSharePlayers.csv  BattingPost.csv  HallOfFame.csv  People.csv  PitchingPost.csv  Teams.csv  TeamsFranchises.csv
data/raw/: AwardsPlayers.csv
src/: cli.ml  cli.mli  database.ml  database.mli  dataframe_utils.ml  dataframe_utils.mli  dune  jaws.ml  jaws.mli  knn.ml  knn.mli  main.ml  misc.py
tests/: dune  tests.ml
