(rule
  (target fpse-project-most1.zip)
  (deps 
    src/main.ml
    src/dataframe_utils.mli
    src/dataframe_utils.ml
    src/database.mli
    src/database.ml
    src/jaws.mli
    src/jaws.ml
    src/knn.mli
    src/cli.mli
    src/cli.ml
    src/misc.py
    src/dune
  )
  (action
    (run zip -R fpse-project-most1.zip %{deps})))