(rule
  (target fpse-project-most1.zip)
  (deps 
    src/main.ml
    src/dataframe_utils.mli
    src/dataframe_utils.ml
    src/database.mli
    src/database.ml
    src/jaws.mli
    src/jaws.ml
    src/knn.mli
    src/knn.ml
    src/cli.mli
    src/cli.ml
    src/misc.py
    tests/tests.ml
    src/dune
    tests/dune
    dune
    dune-project
    README.md
    mlb-hof.opam
  )
  (action
    (run zip -R fpse-project-most1.zip %{deps})))